--- a/app/views/admin/menus/edit.html.erb
+++ b/app/views/admin/menus/edit.html.erb
@@ -17,10 +17,17 @@
   <div class="group">
     <%= f.input :price %>
   </div>
-  
+
   <div class="group">
       <%= f.association :category %>  <!--simple_form_for格式 -->
   </div>
+
+<!--以下是 下拉选单的另一种表达写法
+  <div class="group">
+     <%= select_tag(:category_id, options_for_select(@categories), :prompt => 'Select one')%>
+  </div> -->
+
+
 
   <div>
      <%= f.input :image, as: :file%>
