--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -20,7 +20,7 @@
           <%= product.id %>
         </td>
         <td>
-          <%= link_to product_path(product) do %>
+          <%= link_to admin_products_path(product) do %>
             <% if product.image.present? %>
               <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
             <% else %>
@@ -36,7 +36,7 @@
         </td>
 
         <td>
-          <%= product.category_name %>
+          <%= Category.find(product.category_id).name %>
         </td>
 
         <td>
