--- a/app/views/admin/menus/index.html.erb
+++ b/app/views/admin/menus/index.html.erb
@@ -9,6 +9,7 @@
       <th width="220">Menu Pic</th>
       <th>Name</th>
       <th>Price</th>
+      <th>Category</th>
       <th width="100" colspan="2"> Options</th>
     </tr>
   </thead>
@@ -25,12 +26,10 @@
               <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
             <% end %>
         </td>
-        <td>
-          <%= menu.title %>
-        </td>
-        <td>
-         <%= menu.category_name %>
-         </td>
+
+        <td> <%= menu.title %> </td>
+        <td> <%= menu.price %> </td>
+        <td> <%= menu.category_name %> </td>
 
         <td>
           <%= link_to("Edit", edit_admin_menu_path(menu)) %>
