--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -18,9 +18,16 @@
     <%= f.input :price %>
   </div>
 
+
+  <!-- 以下是 下拉选单的另一种表达写法
   <div class="group">
-     <%= f.association :category %>  <!-- simple_form_for 格式-->
-  </div>
+     <%= f.association :category %>
+  </div> -->
+
+    <div class="group">
+      <%= select_tag( :category_id, options_for_select(@categories), :prompt => '类型')%>
+    </div>
+
 
   <div>
      <%= f.input :image, as: :file%>
