--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,6 +5,8 @@
       <% else %>
          <%= image_tag("http://placehold.it/400x400&text=No Pic", class: "thumbnail")%>
       <% end %>
+
+
    </div>
 
    <div class="col-md-6">
@@ -13,6 +15,7 @@
          <p>
             <%= @product.description%>
          </p>
+
       </div>
       <div> 数量: <%= @product.quantity %></div>
       <div class="product-price"> ¥ <%= @product.price %> </div>
@@ -35,6 +38,7 @@
                      <%= image_tag 'salad1.jpg', class: 'img-responsive'%>
                   <br>
                   <p> 周一:牛油果沙拉</p>
+                  
                </div>
 
 
@@ -76,3 +80,26 @@
          </div>
       </div>
 </div>
+
+
+<!--以下代码是分页的另一种写法，看看就好-->
+<!-- <ul id="myTab" class="nav nav-tabs" role="tablist">
+    <li class="">
+      <a data-toggle="tab" href="#category-0">产品</a>
+    </li>
+    <li class="active">
+      <a data-toggle="tab" href="#category-1">技术</a>
+    </li>
+    <li class="">
+      <a data-toggle="tab" href="#category-3">设计</a>
+    </li>
+    <li class="">
+      <a data-toggle="tab" href="#category-4">运营</a>
+    </li>
+    <li class="">
+      <a data-toggle="tab" href="#category-5">市场与销售</a>
+    </li>
+    <li class="">
+      <a data-toggle="tab" href="#category-7">职能</a>
+    </li>
+  </ul> -->
