--- a/app/views/admin/menus/index.html.erb
+++ b/app/views/admin/menus/index.html.erb
@@ -29,7 +29,7 @@
 
         <td> <%= menu.title %> </td>
         <td> <%= menu.price %> </td>
-        <td> <%= menu.category_name %> </td>
+        <td> <%= menu.category.name %></td>
 
         <td>
           <%= link_to("Edit", edit_admin_menu_path(menu)) %>
