--- a/app/views/admin/menus/new.html.erb
+++ b/app/views/admin/menus/new.html.erb
@@ -18,14 +18,11 @@
     <%= f.input :price %>
   </div>
 
-  <div class="group">
-      <%= f.association :category %>  <!--simple_form_for格式 -->
-  </div>
 
-  <!--以下是 下拉选单的另一种表达写法
+  <!--以下是 下拉选单的另一种表达写法-->
     <div class="group">
-       <%= select_tag(:category_id, options_for_select(@categories), :prompt => 'Select one')%>
-    </div> -->
+       <%= select_tag(:category_id, options_for_select(@categories), :prompt => 'Menu 类型')%>
+    </div>
 
 
   <div>
