--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -13,6 +13,12 @@
                <li class="active">
                   <%= link_to("Products", products_path)%>
                </li>
+
+               <li class="active">
+                  <%= link_to("Menus", menus_path)%>
+               </li>
+
+
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
