--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
    <% @products.each do |product| %>
    <div class="col-xs-6 col-md-3">
       <%= link_to product_path(product) do %>
@@ -11,4 +11,50 @@
       <%= product.title %> ¥ <%= product.price %>
    </div>
    <% end %>
-</div>
+</div> -->
+
+
+<table class="table table-bordered ">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th width="400">Menu Pic</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Category</th>
+
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @products.each do |product| %>
+      <tr>
+        <td>
+          <%= product.id %>
+        </td>
+        <td>
+
+            <% if product.image.present? %>
+              <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
+            <% else %>
+              <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
+            <% end %>
+        </td>
+
+        <td> <%= product.title %> </td>
+        <td> <%= product.price %> </td>
+        <td> <%= product.category.name %></td>
+
+
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to("男士套餐", admin_menus_path(category_id: 1))%>
+<br>
+<%= link_to("女士套餐", admin_products_path(category_id: 2))%>
+<br>
+<%= link_to("随心装", admin_products_path(category_id: 3))%>
