--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,8 +5,6 @@
       <% else %>
          <%= image_tag("http://placehold.it/400x400&text=No Pic", class: "thumbnail")%>
       <% end %>
-
-
    </div>
 
    <div class="col-md-6">
@@ -27,7 +25,16 @@
             <% end %>
       </div>
    </div>
+
+   <div class="col-md-6">
+      <%= link_to("menu类型", admin_menus_path(:category_id => 1))%>
+   </div>
+
+
 </div>
+
+
+
 
 <div class="story-box">
      <div class="row">
@@ -38,7 +45,7 @@
                      <%= image_tag 'salad1.jpg', class: 'img-responsive'%>
                   <br>
                   <p> 周一:牛油果沙拉</p>
-                  
+
                </div>
 
 
@@ -82,8 +89,8 @@
 </div>
 
 
-<!--以下代码是分页的另一种写法，看看就好-->
-<!-- <ul id="myTab" class="nav nav-tabs" role="tablist">
+<!--以下代码是分页的另一种写法，看看就好
+<ul id="myTab" class="nav nav-tabs" role="tablist">
     <li class="">
       <a data-toggle="tab" href="#category-0">产品</a>
     </li>
